# screenrecorder

./: CMakeLists.txt  ScreenRecorder.cpp  ScreenRecorder.h  main.cpp
